--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
         </div>
     </div>
 
-    <h2 id="error" class="text-center text-danger">
+    <h2 id="error" class="text-center text-danger m-5">
 
     </h2>
+
+    <div id="main" class="row mx-auto w-50">
+
+    </div>
 
 
 
